--- a/server/pom.xml
+++ b/server/pom.xml
@@ -176,6 +176,13 @@ read this as the JBoss stack of the Java EE 6 APIs) -->
             <version>1.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-controller</artifactId>
+            <version>1.0.0.Alpha</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
